platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_109.platter
start() {
  flag of expr = 1 - 23 > 12  and (up and down) * 12 * 1 * 2 % 12 / (1/2);
}
